--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- 百度地图 JS SDK -->
+    <script src="https://api.map.baidu.com/api?v=2.0&ak=ByVYBJn8tgqxmydpLXy6ZOjJvAtou5TB&s=1"></script>
   </body>
 </html>
